--- a/src/features/ServiceDetail/serviceDetail.css
+++ b/src/features/ServiceDetail/serviceDetail.css
@@ -119,6 +119,13 @@
         padding-top: 16px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+    .mer-sale-head {
+        padding: 0 16px;
+    }
+    .mer-sale-head .section-title {
+        font-size: 16px;
+        text-align: left;
+    }
     .recomment-list {
         padding: 16px;
         display: grid;
