--- a/src/features/ProductDetail/product.css
+++ b/src/features/ProductDetail/product.css
@@ -7,7 +7,7 @@
     padding: 24px 0 0;
 }
 .product .mer-sale-list {
-    padding: 46px 15px 64px 15px;
+    padding: 46px 0 64px 0;
 }
 .product-cnt {
     display: flex;
