--- a/src/features/ProductDetail/product.css
+++ b/src/features/ProductDetail/product.css
@@ -206,7 +206,7 @@
     display: flex;
     flex-direction: column;
 }
-.user-available-cnt{
+.user-available-cnt {
     font-size: 16px;
     line-height: 20px;
     font-weight: 700;
@@ -365,6 +365,7 @@
         width: 100%;
         overflow-x: scroll;
         padding: 0px 16px;
+        margin-bottom: 88px;
     }
     /* .product-cnt__left-tabs .css-13xfq8m-MuiTabPanel-root {
         padding: 24px 12px !important;
