--- a/src/components/LoadingSketion/style.css
+++ b/src/components/LoadingSketion/style.css
@@ -223,6 +223,56 @@
     height: 200px;
     margin-top: 24px;
 }
+/* load-home-banner */
+.load-home-banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 32px 0px;
+    height: 350px;
+}
+.load-home-banner__img{
+    width: 840px;
+    height: 100%;
+}
+.load-home-banner__img img{
+    width: 100%;
+    height: 100%;
+}
+.load-home-banner__right{
+    width: calc(100% - 840px);
+    height: 100%;
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.load-home-banner__right .top{
+    width: 100%;
+    height: calc(50% - 8px);
+    background-color: #CFEAFF;
+}
+.load-home-banner__right .bot{
+    width: 100%;
+    height: calc(50% - 8px);
+}
+.load-home-banner__right .bot .item{
+    width: calc(50% - 8px);
+    height: 100%;
+    background-color: #CFEAFF;
+}
+.load-home-tag{ 
+    width: 100%;
+
+}
+.load-home-tag .tag-list{
+    display: flex;
+    align-items: center;
+}
+.load-home-tag .tag-list .item{
+    width: calc(100% / 8);
+    height: 128px;
+    padding: 8px 16px;
+}
 @media only screen and (max-width: 1023px) {
     .result-orgs-loading-cnt__item {
         width: 50%;
@@ -313,5 +363,37 @@
     }
     .load-detail__head .right{
        display: none;
+    }
+    .load-home-banner{
+        margin: 0px;
+        height: fit-content;
+    }
+    .load-home-banner__img{
+        width: 100%;
+        height: 170px;
+    }
+    .load-home-banner__img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .load-home-banner__right{
+        display: none;
+    }
+    .load-home-tag{
+        width: 100%;
+        overflow-y: scroll;
+    }
+    .load-home-tag .tag-list{
+        margin-top: 16px;
+    }
+    .load-home-tag .tag-list .item{
+        width: 96px;
+        height: 80px;
+        padding: 0px;
+        margin: 0px 6px;
+    }
+    .load-home-tag .tag-list{
+        width: fit-content;
     }
 }
