--- a/src/components/Map/style.css
+++ b/src/components/Map/style.css
@@ -110,9 +110,10 @@
 .map .content-img img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover !important;
 }
 .map .content-head span {
+    padding: 0 40px 0 24px;
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
@@ -122,7 +123,6 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 24px;
-    text-align: center;
     visibility: hidden;
     opacity: 0;
 }
@@ -176,7 +176,7 @@
 }
 .list-org__active {
     margin-left: 0 !important;
-    transition: all 0.1s linear;
+    transition: all 0.1s;
 }
 .map .dialog-map__item {
     display: flex;
@@ -279,7 +279,7 @@
     top: 0;
     left: 0;
     margin-left: -25%;
-    transition: all 0.3s ease-in !important;
+    transition: all 0.2s !important;
 }
 .map .open-list__org {
     z-index: 6;
@@ -336,6 +336,72 @@
 }
 .map .map-item__mobile {
     display: none;
+}
+.map .content-info__list {
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 16px 0;
+    border-bottom: 1px solid #ccc;
+}
+.map .content-info__item {
+    display: flex;
+    grid-gap: 0 8px;
+    width: 100%;
+    align-items: center;
+}
+.map .content-info__item .item-icon {
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+}
+.map .content-info__item .item-text {
+    font-size: 14px;
+    font-weight: 500;
+}
+.map .content-info__item .item-icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.map .content-info__rating {
+    padding: 24px;
+    position: relative;
+}
+.map .evaluate-input__change {
+    width: 100%;
+    bottom: unset;
+    padding: 16px 24px;
+}
+
+.map .input-btn {
+    right: 36px;
+}
+.map .evaluate-rating__left {
+    width: 33.33%;
+    grid-gap: 4px 0;
+    border: 0;
+}
+.map .evaluate-rating__right {
+    width: 66.66%;
+    margin-right: 16px;
+}
+.map .MuiRating-root {
+    font-size: 16px;
+}
+.map .evaluate-rating__left,
+.map .evaluate-rating__right {
+    padding: 0px;
+}
+.map .evaluate-rating__quantity {
+    font-size: 14px;
+}
+.map .org-evaluate__cnt .evaluate-rating {
+    border: 0;
+    flex-direction: row-reverse;
+}
+.map .org-evaluate {
+    width: 100%;
 }
 
 @media only screen and (max-width: 1023px) {
