--- a/src/features/Carts/style.css
+++ b/src/features/Carts/style.css
@@ -287,11 +287,18 @@
     overflow-y: scroll;
     background-color: var(--white);
     padding: 24px;
+    max-height: calc(100vh - 64px);
 }
 .cart-vouchers-list .list .item {
     width: 100%;
     height: 150px;
     margin: 12px 0px;
+    padding: 0 14px;
+}
+.cart-vouchers-list .list {
+    overflow: scroll;
+    height: 100%;
+    margin-top: 14px;
 }
 .cart-item-voucher {
     padding: 8px 4px;
@@ -440,6 +447,7 @@
         max-width: unset;
         overflow-y: unset;
         padding: 20px;
+        height: 100%;
     }
 
     .cart-vouchers-list__item-right {
