--- a/components/home/home.module.css
+++ b/components/home/home.module.css
@@ -1,3 +1,4 @@
+/* home province */
 .province {
 	padding: 16px;
 	margin-top: 24px;
@@ -17,25 +18,22 @@
 	overflow: hidden;
 	position: relative;
 	transition: all 0.3s ease-out;
+	background-color: #ccc;
 }
 .provinceItem:first-child {
 	grid-column: 1/3;
 	grid-row: 1/2;
-	background-color: aqua;
 }
 .provinceItem:nth-child(2),
 .provinceItem:nth-child(3) {
 	grid-row: 1/3;
-	background-color: aquamarine;
 }
 .provinceItem:nth-child(4),
 .provinceItem:nth-child(5) {
 	grid-row: 2/4;
-	background-color: greenyellow;
 }
 .provinceItem:nth-child(6) {
 	grid-column: 3/5;
-	background-color: yellow;
 }
 .provinceTitle {
 	color: var(--red-cl);
@@ -63,13 +61,16 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	filter: grayscale(10%);
+	-webkit-filter: grayscale(10%);
+	-moz-filter: grayscale(10%);
 	transition: all 0.2s ease-in;
-	filter: grayscale(50%);
-	-webkit-filter: grayscale(50%);
-	-moz-filter: grayscale(50%);
 }
 .provinceItem img:hover {
 	transform: scale(1.025);
+	filter: saturate(170%);
+	-webkit-filter: saturate(170%);
+	-moz-filter: saturate(170%);
 	transition: all 0.2s ease-in;
-	filter: unset;
 }
+/* end home province */
