--- a/components/home/home.module.css
+++ b/components/home/home.module.css
@@ -293,30 +293,153 @@
 	width: 100vw;
 	background-color: #ffe3d2;
 }
-.home_discounts__title{
+.home_discounts__title {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	background-color: #ff721f;
-    border-radius: 0 0 16px 16px;
-    margin-bottom: 16px;
-    padding: 16px;
+	border-radius: 0 0 16px 16px;
+	margin-bottom: 16px;
+	padding: 16px;
 }
-.home_discounts__title span:first-child{
+.home_discounts__title span:first-child {
 	color: #fff;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: uppercase;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+	font-family: Nunito;
 }
-.home_discounts__title a{
+.home_discounts__title a {
 	color: #fff;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 18px;
-    text-transform: capitalize;
+	font-family: Nunito;
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 18px;
+	text-transform: capitalize;
 }
-
+.homeDiscountList {
+	grid-gap: 16px;
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+}
+.homeDiscountItem {
+	border-radius: 8px;
+	cursor: pointer;
+	position: relative;
+	transition: all 0.3s;
+	width: 100%;
+	cursor: pointer;
+	border: 1px solid #ccc;
+}
+.homeDiscountItem:hover {
+	border: 1px solid var(--red-cl);
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	transform: translateY(-5px);
+}
+.discountImgOrg {
+	background-color: var(--bg-white);
+	border-radius: 100%;
+	overflow: hidden;
+	left: 5px;
+	position: absolute;
+	top: 5px;
+	width: 35px;
+}
+.discountImg {
+	border-radius: 8px 8px 0 0;
+	width: 100%;
+	overflow: hidden;
+}
+.discountDetail {
+	background-color: #fff;
+	border-radius: 0 0 8px 8px;
+	padding: 8px;
+	overflow: hidden;
+}
+.discountTitle {
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	color: var(--text-black);
+	display: -webkit-box;
+	font-size: 14px;
+	font-weight: 700;
+	line-height: 16px;
+	min-height: 32px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-word;
+}
+.discountWrapPrice {
+	display: flex;
+	align-items: center;
+	grid-gap: 0 2px;
+}
+.discountSpecialPrice {
+	color: var(--red-cl);
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 18px;
+	margin-right: 6px;
+}
+.discountOdlPrice {
+	color: var(--text-hover);
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 14px;
+	text-decoration: line-through;
+}
+.discountAddressWrap {
+	display: flex;
+	align-items: flex-start;
+}
+.iconMap {
+	margin: 2px 4px 0 0;
+	flex-shrink: 0;
+}
+.discountAddress {
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+	color: var(--text-black);
+	display: -webkit-box;
+	font-size: 12px;
+	font-weight: 700;
+	line-height: 18px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-word;
+}
+.discountLimitBar {
+	background: var(--red-cl);
+	background: linear-gradient(90deg, #ff721f 0, #f5c031);
+	background: -webkit-linear-gradient(90deg, #ff721f 0, #f5c031);
+	border-radius: 12px;
+	height: 18px;
+	margin-top: 6px;
+	position: relative;
+}
+.discountLimitBarUser {
+	border-radius: 9px;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 50%;
+}
+.discountLimitBarNum {
+	color: #fff;
+	font-size: 12px;
+	font-weight: 700;
+	height: 100%;
+	left: 0;
+	line-height: 18px;
+	position: absolute;
+	text-align: center;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+}
 /* end home discount */
 
 /* reponsive */
@@ -360,7 +483,31 @@
 		width: 50%;
 		grid-gap: 16px;
 	}
+	.tags_cnt {
+		margin: 24px 0;
+	}
+	.tag_list {
+		padding: 0 8px;
+	}
+	.item_name {
+		font-size: 10px;
+	}
+	.tag_item {
+		padding: 0 8px;
+	}
 	/* close banner */
+
+	/* home discount */
+	.homeDiscountList {
+		grid-template-columns: repeat(4, 1fr);
+	}
+	.homeDiscountWrap {
+		padding: 0 16px;
+	}
+	.discount_cnt {
+		padding-bottom: 24px;
+	}
+	/* close home discount */
 }
 
 @media screen and (max-width: 767.98px) {
@@ -373,7 +520,7 @@
 		display: flex;
 		overflow-x: scroll;
 		width: 100%;
-		padding: 16px;
+		padding: 16px 12px;
 		margin: 0;
 	}
 	/* open province */
@@ -392,14 +539,14 @@
 	}
 
 	.tag_item {
-		padding: 0;
+		padding: 8px 8px;
 		width: 96px;
 	}
 
 	.tag_item_cnt {
 		border-radius: 8px;
 		cursor: pointer;
-		transition: all .3s;
+		transition: all 0.3s;
 		background-color: #fafafa;
 		box-shadow: none;
 		padding: 4px 0;
@@ -431,7 +578,7 @@
 		grid-template-rows: repeat(4, 1fr);
 		height: 100%;
 		margin-top: 16px;
-		padding: 0 16px 16px 16px;
+		padding: 0 12px 16px 12px;
 	}
 
 	.provinceItem:first-child {
@@ -466,20 +613,16 @@
 
 	.provinceContent {
 		background-color: unset;
+		margin-left: 0;
+		bottom: 4px;
 	}
 
-	.provinceTitle {
-		color: white;
-		font-size: 14px;
-		font-weight: 700;
-		line-height: 18px;
-	}
-
+	.provinceTitle,
 	.provinceTotal {
 		color: white;
-		font-size: 14px;
+		font-size: 12px;
 		font-weight: 700;
-		line-height: 20px;
+		line-height: unset;
 	}
 
 	.provinceItem img {
@@ -494,7 +637,9 @@
 	/* close province */
 
 	/* open tags */
-
+	.homeTags {
+		display: none;
+	}
 	/* close tags */
 
 	/* open banner */
@@ -505,4 +650,48 @@
 		margin: 0;
 	}
 	/* close banner */
+
+	/* open home discount */
+	.discount_cnt {
+		padding: 12px 0;
+		margin-bottom: 24px;
+	}
+	.homeDiscountWrap {
+		overflow-x: scroll;
+		padding: 12px 12px 0 12px;
+	}
+	.homeDiscountList {
+		grid-gap: 12px;
+		display: flex;
+		flex-shrink: 0;
+		flex-wrap: nowrap;
+		width: max-content;
+	}
+	.homeDiscountItem {
+		border-radius: 8px;
+		cursor: pointer;
+		position: relative;
+		transition: all 0.4s;
+		width: 164px;
+	}
+	.discountTitle {
+		font-size: 13px;
+	}
+	.discountWrapPrice {
+		margin-top: 4px;
+	}
+	.home_discounts__title {
+		border-radius: 8px;
+		margin: 0 12px;
+		padding: 5px 12px;
+	}
+	.home_discounts__title span:first-child {
+		font-size: 18px;
+		line-height: 24px;
+		text-transform: inherit;
+	}
+	.home_discounts__title a {
+		font-size: 12px;
+	}
+	/* close home discount */
 }
