--- a/components/homeSectionHead/HomeSectionTitle.module.css
+++ b/components/homeSectionHead/HomeSectionTitle.module.css
@@ -12,19 +12,25 @@
 .title {
 	font-size: 24px;
 	font-weight: 700;
+	font-family: Nunito;
+	color: var(--text-black);
 }
 .homeSeemore {
 	font-size: 14px;
 	color: var(--purple);
 	font-weight: bold;
 	cursor: pointer;
+	font-family: Nunito;
 }
 
 @media screen and (max-width: 767.98px) {
 	.sectionHeadWrap {
-		padding: 0 16px;
+		padding: 0 12px;
 	}
 	.title {
-		font-size: 20px;
+		font-size: 18px;
+	}
+	.homeSeemore {
+		font-size: 12px;
 	}
 }
